[gd_scene load_steps=28 format=3 uid="uid://crqqqekxigc43"]

[ext_resource type="Script" path="res://scripts/character_body_2d.gd" id="1_hxdyc"]
[ext_resource type="Texture2D" uid="uid://sx1jdx2ptj3j" path="res://img/MainGuySpriteSheet.png" id="1_qngw7"]
[ext_resource type="PackedScene" uid="uid://dj5mcdbe2gg4r" path="res://escenas/ataque.tscn" id="2_kpc11"]
[ext_resource type="Texture2D" uid="uid://vvssy5solpl8" path="res://img/pngegg.png" id="3_cewux"]
[ext_resource type="Script" path="res://escenas/area_2d.gd" id="4_pb1si"]
[ext_resource type="PackedScene" uid="uid://cp2jo25c7j8pf" path="res://globo1.tscn" id="4_r4fb5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ayao6"]
atlas = ExtResource("1_qngw7")
region = Rect2(0, 0, 41, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_cnmlj"]
atlas = ExtResource("1_qngw7")
region = Rect2(41, 0, 41, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_y7544"]
atlas = ExtResource("1_qngw7")
region = Rect2(82, 0, 41, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_7owpx"]
atlas = ExtResource("1_qngw7")
region = Rect2(41, 0, 41, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_rjyhv"]
atlas = ExtResource("1_qngw7")
region = Rect2(0, 108, 41, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_ubmpt"]
atlas = ExtResource("1_qngw7")
region = Rect2(41, 108, 41, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_3tjer"]
atlas = ExtResource("1_qngw7")
region = Rect2(82, 108, 41, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_qntgg"]
atlas = ExtResource("1_qngw7")
region = Rect2(0, 36, 41, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_h2vib"]
atlas = ExtResource("1_qngw7")
region = Rect2(41, 36, 41, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_vhhwk"]
atlas = ExtResource("1_qngw7")
region = Rect2(82, 36, 41, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_tlert"]
atlas = ExtResource("1_qngw7")
region = Rect2(0, 72, 41, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_v88aq"]
atlas = ExtResource("1_qngw7")
region = Rect2(41, 72, 41, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_dinbe"]
atlas = ExtResource("1_qngw7")
region = Rect2(82, 72, 41, 36)

[sub_resource type="SpriteFrames" id="SpriteFrames_me2hk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ayao6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cnmlj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y7544")
}],
"loop": true,
"name": &"down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7owpx")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rjyhv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ubmpt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3tjer")
}],
"loop": true,
"name": &"left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qntgg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h2vib")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vhhwk")
}],
"loop": true,
"name": &"right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tlert")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v88aq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dinbe")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3ry2t"]
radius = 7.0
height = 20.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ys6db"]
radius = 7.0
height = 22.0

[sub_resource type="AtlasTexture" id="AtlasTexture_bqwqe"]
atlas = ExtResource("3_cewux")
region = Rect2(0, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_i8ibx"]
atlas = ExtResource("3_cewux")
region = Rect2(300, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_x00ba"]
atlas = ExtResource("3_cewux")
region = Rect2(600, 0, 300, 300)

[sub_resource type="SpriteFrames" id="SpriteFrames_eucxm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bqwqe")
}],
"loop": true,
"name": &"lleno",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i8ibx")
}],
"loop": true,
"name": &"medio",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x00ba")
}],
"loop": true,
"name": &"vacio",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_q0pet"]
radius = 4.12311

[node name="CharacterBody2D" type="CharacterBody2D" groups=["personaje"]]
script = ExtResource("1_hxdyc")
attack_scene = ExtResource("2_kpc11")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.5, 1.5)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(3.75, -6)
scale = Vector2(0.573171, 0.666667)
sprite_frames = SubResource("SpriteFrames_me2hk")
animation = &"down"
frame_progress = 0.365589

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, -5)
shape = SubResource("CapsuleShape2D_3ry2t")

[node name="globo" parent="." instance=ExtResource("4_r4fb5")]
position = Vector2(-370, -192)

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource("4_pb1si")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(2, -5)
shape = SubResource("CapsuleShape2D_ys6db")

[node name="Corazon1" type="CharacterBody2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Corazon1"]
position = Vector2(-32.25, 202.625)
scale = Vector2(0.0783333, 0.0775)
sprite_frames = SubResource("SpriteFrames_eucxm")
animation = &"lleno"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Corazon1"]
position = Vector2(306, -557)
shape = SubResource("CircleShape2D_q0pet")

[node name="Corazon2" type="CharacterBody2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Corazon2"]
position = Vector2(-7, 203)
scale = Vector2(0.078, 0.087)
sprite_frames = SubResource("SpriteFrames_eucxm")
animation = &"lleno"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Corazon2"]
position = Vector2(306, -557)
shape = SubResource("CircleShape2D_q0pet")

[node name="Corazon3" type="CharacterBody2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Corazon3"]
position = Vector2(18, 203)
scale = Vector2(0.078, 0.087)
sprite_frames = SubResource("SpriteFrames_eucxm")
animation = &"medio"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Corazon3"]
position = Vector2(306, -557)
shape = SubResource("CircleShape2D_q0pet")

[node name="GlobosLabel" type="Label" parent="."]
modulate = Color(0.000113828, 0.000113828, 0.000113828, 1)
offset_left = -342.0
offset_top = -211.0
offset_right = -302.0
offset_bottom = -188.0
text = "0
"

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
